--- a/css/app.css
+++ b/css/app.css
@@ -202,4 +202,80 @@ border: 1px solid rgb(126, 50, 158);
 .process-3 li:not(:last-child) {
     margin-bottom: 2.71428571em;
 }
-
+.product-display{
+    background: #FAFAFA;
+    padding: 4.5rem 0;
+    min-height: 100vh;
+}
+.product-card{
+    border: 1px solid #FC8C79;
+    background: #ffffff;
+    padding: 6px 8px;
+    border-radius: 4px;
+    transition: .3s all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.product-card:hover{
+    border: 1px solid #ffffff;
+    -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.product-card:hover .image-holder img{
+    transform: scale(1.0);
+}
+.product-card .image-holder img{
+    transform: scale(0.75);
+    transition: all 0.5s ease-in-out;
+    max-width: 100%;
+}
+.product-card .name{
+    text-transform: capitalize;
+    font-size: 18px;
+}
+.product-card .price{
+    text-align: center;
+}
+.offer-price{
+    font-weight: 700;
+    color: #000000;
+}
+.original-price{
+    color: #999999;
+    text-decoration: line-through;
+}.offer-disconut{
+    background: #FDD200;
+    color: #222222;
+    padding: 4px;
+}
+.product-card .offer{
+    position: absolute;
+    right: 18px;
+    top :2px;
+    padding: 4px 10px;
+    border-radius: 4px;
+    background: #FDD200;
+    z-index: 10;
+}
+.product-type-list{
+    background:#FFF;
+    margin: 0;
+    padding: 10px 8px;
+    
+}
+.product-type-list li{
+    list-style: none;  
+}
+.product-type-list li a{
+    padding: 20px 14px;
+}
+.list-group-item{
+    border :0;
+}
+.list-group-item.active  {
+    z-index: 2;
+    color: #ffffff !important;
+    background-color: #825C92;
+    border-color: #007bff;
+}
+.list-group-item.active  a{
+    color: #ffffff;
+}
